--- a/AnagramSolver/AnagramSolver.WebApp/Views/Words/Index.cshtml
+++ b/AnagramSolver/AnagramSolver.WebApp/Views/Words/Index.cshtml
@@ -11,7 +11,9 @@
     <ul>
         @foreach(var item in Model.Items)
         {
-            <li>@item</li>
+            <li>
+                <a asp-controller="Home" asp-action="Index" asp-route-id="@item">@item</a>
+            </li>
         }
     </ul>
 
