--- a/AnagramSolver/AnagramSolver.WebApp/Views/Shared/_Layout.cshtml
+++ b/AnagramSolver/AnagramSolver.WebApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Words" asp-action="Index">Dictionary</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Words" asp-action="New">Add New Word</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
