--- a/AnagramSolver/AnagramSolver.WebApp/Views/Home/Index.cshtml
+++ b/AnagramSolver/AnagramSolver.WebApp/Views/Home/Index.cshtml
@@ -7,9 +7,13 @@
 <div class="text-center">
 
     <h1 class="display-4">ANAGRAM SOLVER</h1>
-
+    </br>
+    @if (!string.IsNullOrEmpty(Model.LastSearch))
+    {
+        <p class="text-secondary">Last search: @Model.LastSearch</p>
+    }
     <form asp-controller="Home" asp-action="Index" asp-route-id="" method="get">
-        <input type="text" name="id" placeholder="Enter your words" />
+        <input type="text" name="id" placeholder="Enter your words"/>
         <button type="submit">Submit</button>
     </form>
 
