--- a/AnagramSolver/AnagramSolver.WebApp/Views/Home/Index.cshtml
+++ b/AnagramSolver/AnagramSolver.WebApp/Views/Home/Index.cshtml
@@ -7,11 +7,26 @@
 <div class="text-center">
 
     <h1 class="display-4">ANAGRAM SOLVER</h1>
+
     </br>
+
+    @if (Model.SearchHistory.Any())
+    {
+        <div class="mb-3">
+            <p class="text-secondary">
+                Search history: <span class="text-secondary">@string.Join(", ", Model.SearchHistory)</span>
+            </p>
+           
+        </div>
+    }
+
     @if (!string.IsNullOrEmpty(Model.LastSearch))
     {
         <p class="text-secondary">Last search: @Model.LastSearch</p>
     }
+
+    </br>
+
     <form asp-controller="Home" asp-action="Index" asp-route-id="" method="get">
         <input type="text" name="id" placeholder="Enter your words"/>
         <button type="submit">Submit</button>
